fix width context titles on small screens

--- a/app/css/browser/side-bar-contextual-lists.styl
+++ b/app/css/browser/side-bar-contextual-lists.styl
@@ -6,6 +6,11 @@
     font-family: var(--font-mont);
     width: 33%;
 
+    @media (max-width: 1024px) {
+      width: 80px;
+      white-space: normal;
+    }
+
     &.selected {
       color: var(--color-blue);
     }
